2005-02-16 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	The "Load Symbols" action doesn't update the detail value.
	* ModulesViewEventHandler.java

2005-02-15 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	The "Load Symbols For All" action is added to the Modules view.
	* plugin.xml
	* plugin.properties
	* icons/full/clcl16/load_all_symbols_co.gif
	* icons/full/dlcl16/load_all_symbols_co.gif
	* icons/full/elcl16/load_all_symbols_co.gif
	* ICDebugUIInternalConstants.java: removed (cleanup)

2005-02-15 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	The Modules view's doesn't update labels when symbols are loaded.
	* ModulesViewEventHandler.java

2005-02-14 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	New images for the "Load Symbols" action.
	* plugin.xml
	* icons/full/clcl16/load_symbols_co.gif
	* icons/full/dlcl16/load_symbols_co.gif
	* icons/full/elcl16/load_symbols_co.gif

2005-02-14 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Added the "Load Symbols" action.
	* LoadModuleSymbolsActionDelegate.java: new
	* ActionMessages.properties
	* plugin.xml
	* plugin.properties

2005-02-14 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Implementing module's properties.
	* PropertyPageMessages.properties
	* ModuleProperties.java (former ModuleProperties.java)
	* ModulePropertyPage.java

2005-02-14 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Implementing module's properties.
	* PropertyPageMessages.properties
	* CModuleProperties.java
	* ModulePropertyPage.java

2005-02-11 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Implementing module's properties.
	* CDebugModelPresentation.java
	* CDebugUIMessages.properties
	* ModulesPropertiesActionDelegate.java: new
	* CModuleProperties.java: new
	* ModulePropertyPage.java: new
	* ModulesMessages.properties
	* ModulesView.java
	* plugin.xml